--- a/.github/workflows/release2crazyrolfie.yml
+++ b/.github/workflows/release2crazyrolfie.yml
@@ -1,9 +1,6 @@
 name: ci
 
-on:
-  push:
-    tags:
-      - 'gh-v*.*.*'
+on: [push, pull_request]
 
 jobs:
   docker:
@@ -32,7 +29,7 @@ jobs:
           elif [[ $GITHUB_REF == refs/heads/* ]]; then
             VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
             if [ "${{ github.event.repository.default_branch }}" = "$VERSION" ]; then
-              VERSION=edge
+              VERSION=latest
             fi
             TAGS="crazyrolfie/${{ secrets.DOCKER_IMAGE }}:${VERSION}"
           elif [[ $GITHUB_REF == refs/pull/* ]]; then
