--- a/.github/workflows/release2crazyrolfie.yml
+++ b/.github/workflows/release2crazyrolfie.yml
@@ -49,8 +49,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: docker.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          username: ${{ secrets.DOCKERUSERNAME }}
+          password: ${{ secrets.DOCKERPASSWORD }}
       -
         name: Build and push
         id: docker_build
