--- a/.github/workflows/release2crazyrolfie.yml
+++ b/.github/workflows/release2crazyrolfie.yml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile.erlang
+          file: ./Dockerfile
           platforms: linux/arm/v7,linux/arm64,linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
